--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,8 @@
             android:name=".PasscodeActivity">
         </activity>
         <activity
-            android:name=".TabActivity">
+            android:name=".TabActivity"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
 
