--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,7 @@ dependencies {
     implementation 'com.android.support:design:27.0.0'
     compile 'com.android.volley:volley:1.0.0'
     compile 'android.arch.persistence.room:runtime:1.0.0'
+    compile 'com.journeyapps:zxing-android-embedded:3.5.0'
     annotationProcessor 'android.arch.persistence.room:compiler:1.0.0'
+
 }
