--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,11 +42,12 @@
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-        android:name=".TabActivity"
-        android:theme="@style/AppTheme.NoActionBar">
-         </activity>
+            android:name=".TabActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
         <activity
-            android:name=".ShowQRActivity">
+            android:name=".ShowQRActivity"
+            android:parentActivityName=".TabActivity">
         </activity>
 
     </application>
