--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,8 +45,7 @@
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-            android:name=".TabActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name=".TabActivity">
         </activity>
     </application>
 
