--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,6 @@ dependencies {
     implementation 'com.android.support:design:27.0.0'
     compile 'com.android.volley:volley:1.0.0'
     compile 'android.arch.persistence.room:runtime:1.0.0'
-    implementation 'com.google.android.gms:play-services:10.2.6'
+    compile 'com.google.android.gms:play-services-vision:9.4.0+'
     annotationProcessor 'android.arch.persistence.room:compiler:1.0.0'
 }
