--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     compile 'android.arch.persistence.room:runtime:1.0.0'
     compile 'com.journeyapps:zxing-android-embedded:3.5.0'
-    compile 'com.google.android.gms:play-services-vision:9.4.0+'
+    compile 'com.google.android.gms:play-services-vision:11.4.2+'
     annotationProcessor 'android.arch.persistence.room:compiler:1.0.0'
+    compile 'io.intercom.android:intercom-sdk:4.+'
 }
