--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,7 @@
             android:screenOrientation="portrait"
             android:name=".TabActivity"
             android:windowSoftInputMode="adjustPan"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/PayProTheme">
         </activity>
         <activity android:name=".SendMoneyConfirmActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
