--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/app_ico_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/PayProTheme">
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -41,7 +41,7 @@
             android:name=".PhoneNumberActivity"
             android:windowSoftInputMode="stateVisible"
             android:label="@string/title_activity_phone_number"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/PayProTheme.NoActionBar">
         </activity>
         <activity
             android:screenOrientation="portrait"
@@ -59,7 +59,7 @@
         <activity
             android:screenOrientation="portrait"
             android:name=".PasscodeActivity"
-            android:theme="@style/AppTheme.NoActionBar"
+            android:theme="@style/PayProTheme.NoActionBar"
             android:windowSoftInputMode="stateVisible">
         </activity>
         <activity
